--- a/docs/store-locator.scss
+++ b/docs/store-locator.scss
@@ -21,7 +21,12 @@
   padding: 20px;
 }
 
+.collection-filter {
+  margin-top: 15px;
+}
+
 .collection-view {
+  &__map_view,
   &__map-view {
     position: relative;
   }
@@ -96,6 +101,36 @@
       color: #000;
       background: transparent;
     }
+  }
+
+  &__msg {
+    background-color: #f2f2f2;
+    padding: 30px;
+    z-index: 10;
+    width: 100%;
+    margin-bottom: 20px;
+    text-align: right;
+
+    > p {
+      float: left;
+      max-width: 80%;
+      text-align: left;
+      margin-bottom: 0;
+    }
+  }
+
+  &__change {
+    margin: 0;
+    border: 0;
+    padding: 0;
+    width: auto;
+    background: transparent;
+    color: #000;
+    letter-spacing: normal;
+    text-transform: none;
+    font-size: 14px;
+    font-weight: normal;
+    text-decoration: underline;
   }
 }
 
